# quantmuse

./: .gitignore  README.md  README_Factor_Analysis.md  README_Kalshi_Arbitrage.md  README_Quantitative_Strategies.md  README_Signals.md  README_Trend_Following.md  USAGE.md  pyproject.toml  setup.py  vercel.json
.github/workflows/: cpp_backend.yml  paper_trade.yml
backend/: CMakeLists.txt
backend/include/: data_loader.hpp  order_executor.hpp  risk_manager.hpp
backend/include/common/: types.hpp
backend/src/: bindings.cpp  order_executor.cpp  risk_manager.cpp
backend/tests/: test_bindings.cpp
data_service/: __init__.py  engine.py
data_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_service/api/: __init__.py  api_documentation.py  api_gateway.py  api_testing.py
data_service/backtest/: __init__.py  backtest_engine.py  performance_analyzer.py
data_service/execution/: __init__.py  risk_check.py
data_service/fetchers/: __init__.py  binance_fetcher.py  eodhd_fetcher.py  fmp_fetcher.py  kalshi_fetcher.py
data_service/ml/: __init__.py  deep_learning.py  ensemble_models.py  model_evaluation.py  optimization.py
data_service/processors/: __init__.py  data_processor.py
data_service/realtime/: __init__.py  market_data_stream.py  tick_processor.py
data_service/signals/: __init__.py  alpha_vantage_signals.py  analyst_signals.py  base.py  signal_backtest.py  signal_sweep.py
data_service/strategies/: __init__.py  carry.py  carry_data.py  kalshi_arbitrage.py  paper_trade.py  trend_following.py  trend_following_data.py  trend_following_robustness.py
data_service/utils/: __init__.py
data_service/vector_db/: __init__.py  document_processor.py  embedding_manager.py  search_engine.py
data_service/visualization/: __init__.py  dashboard_charts.py  matplotlib_charts.py  real_time_charts.py
data_service/web/: api_server.py
examples/: analyst_signal_demo.py  eodhd_sentiment_demo.py  execution_risk_demo.py  export_dashboard_data.py  kalshi_arbitrage_demo.py  paper_trade_demo.py  portfolio_snapshot.example.json  signal_backtest_demo.py  signal_sweep_demo.py  signals_demo.py  trend_following_demo.py
frontend/: app.js  data.json  index.html  styles.css
paper_trades/: ledger.csv
tests/: test_analyst_signals.py  test_api.py  test_binance_fetcher.py  test_engine_integration.py  test_eodhd_fetcher.py  test_kalshi_arbitrage.py  test_ml_new.py  test_native_bridge.py  test_paper_trade.py  test_realtime.py  test_signal_backtest.py  test_signal_sweep.py  test_signals.py  test_trend_following.py  test_trend_following_carry.py  test_vector_db.py  test_visualization.py
